--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Demo App</string>
+    <string name="app_name">Calculator Lite</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
